--- a/MitosisTimesheet/src/main/webapp/reports/InvoiceReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/InvoiceReport.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="InvoiceReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="4.177248169415659"/>
+	<property name="ireport.zoom" value="1.0000000000000038"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="1786"/>
+	<property name="ireport.y" value="242"/>
 	<parameter name="invoiceDetailsList" class="java.lang.Object"/>
 	<parameter name="logoimage" class="java.lang.String">
 		<parameterDescription><![CDATA[]]></parameterDescription>
@@ -70,7 +70,7 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="243" splitType="Stretch">
+		<band height="244" splitType="Stretch">
 			<textField>
 				<reportElement x="30" y="14" width="106" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
@@ -107,22 +107,19 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Invoice Amount:"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="2" y="187" width="552" height="2"/>
+				<reportElement x="105" y="192" width="1" height="51"/>
 			</line>
 			<line>
-				<reportElement x="105" y="189" width="1" height="54"/>
+				<reportElement x="178" y="192" width="1" height="51"/>
 			</line>
 			<line>
-				<reportElement x="178" y="189" width="1" height="54"/>
+				<reportElement x="244" y="192" width="1" height="51"/>
 			</line>
 			<line>
-				<reportElement x="244" y="189" width="1" height="54"/>
+				<reportElement x="319" y="192" width="1" height="50"/>
 			</line>
 			<line>
-				<reportElement x="319" y="189" width="1" height="53"/>
-			</line>
-			<line>
-				<reportElement x="400" y="189" width="1" height="54"/>
+				<reportElement x="400" y="193" width="1" height="50"/>
 			</line>
 			<textField>
 				<reportElement x="3" y="189" width="19" height="51"/>
@@ -140,7 +137,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["To Date"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="245" y="189" width="73" height="47"/>
+				<reportElement x="244" y="193" width="73" height="47"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Team Member"]]></textFieldExpression>
 			</textField>
@@ -150,32 +147,26 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Rate Per Hour"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="402" y="189" width="85" height="43"/>
+				<reportElement x="401" y="197" width="85" height="43"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Billable Hour"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="487" y="202" width="67" height="34"/>
+				<reportElement x="490" y="202" width="64" height="34"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Total Amount"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="24" y="188" width="1" height="55"/>
+				<reportElement x="24" y="192" width="1" height="51"/>
 			</line>
 			<line>
-				<reportElement x="489" y="189" width="1" height="54"/>
+				<reportElement x="489" y="193" width="1" height="50"/>
 			</line>
 			<textField>
-				<reportElement x="106" y="202" width="61" height="20"/>
-				<textElement/>
+				<reportElement x="109" y="202" width="61" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Fromdate"]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement x="554" y="188" width="1" height="54"/>
-			</line>
-			<line>
-				<reportElement x="2" y="187" width="1" height="56"/>
-			</line>
 			<textField isBlankWhenNull="true">
 				<reportElement x="409" y="14" width="131" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
@@ -211,6 +202,9 @@
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[((com.mitosis.timesheet.model.InvoiceHdrModel)((com.mitosis.timesheet.pojo.InvoiceDetailsReport)$P{invoiceDetailsList}).invoiceHdr).getCurrencyCode()]]></textFieldExpression>
 			</textField>
+			<rectangle>
+				<reportElement mode="Transparent" x="2" y="192" width="552" height="51"/>
+			</rectangle>
 		</band>
 	</columnHeader>
 	<detail>
@@ -225,31 +219,25 @@
 				<reportElement x="244" y="0" width="1" height="46"/>
 			</line>
 			<line>
-				<reportElement x="400" y="-1" width="1" height="46"/>
-			</line>
-			<line>
-				<reportElement x="3" y="46" width="551" height="1"/>
+				<reportElement x="400" y="0" width="1" height="45"/>
 			</line>
 			<line>
 				<reportElement x="24" y="0" width="1" height="46"/>
 			</line>
 			<line>
-				<reportElement x="105" y="-1" width="1" height="46"/>
+				<reportElement x="105" y="0" width="1" height="45"/>
 			</line>
 			<line>
 				<reportElement x="178" y="0" width="1" height="46"/>
 			</line>
 			<line>
-				<reportElement x="489" y="1" width="1" height="45"/>
+				<reportElement x="489" y="0" width="1" height="46"/>
 			</line>
 			<line>
-				<reportElement x="3" y="1" width="551" height="1"/>
+				<reportElement x="554" y="-2" width="1" height="48"/>
 			</line>
 			<line>
-				<reportElement x="554" y="1" width="1" height="45"/>
-			</line>
-			<line>
-				<reportElement x="2" y="0" width="1" height="46"/>
+				<reportElement x="2" y="0" width="1" height="45"/>
 			</line>
 			<textField isBlankWhenNull="true">
 				<reportElement x="244" y="2" width="76" height="44"/>
@@ -257,32 +245,32 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{teamMember}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="29" y="2" width="77" height="44"/>
+				<reportElement x="28" y="1" width="77" height="39"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{description}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="105" y="2" width="73" height="44"/>
+				<reportElement x="111" y="0" width="56" height="44"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceFromDate})]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="178" y="2" width="66" height="44"/>
+				<reportElement x="179" y="0" width="66" height="44"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{invoiceToDate})]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="490" y="1" width="64" height="45"/>
+				<reportElement x="495" y="1" width="53" height="39"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{totalAmount}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="318" y="2" width="83" height="44"/>
+				<reportElement x="330" y="2" width="60" height="38"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{ratePerHour}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="400" y="2" width="87" height="44"/>
+				<reportElement x="403" y="2" width="83" height="38"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{billableHours}]]></textFieldExpression>
 			</textField>
@@ -291,6 +279,9 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="2" y="45" width="552" height="1"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
