--- a/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/employeeDetailsReport.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report1" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="93"/>
+	<property name="ireport.y" value="62"/>
 	<queryString>
 		<![CDATA[SELECT employee_master.id,employee_master.first_name, employee_master.last_name, lob_master.lob_name
 FROM employee_master
@@ -13,6 +13,71 @@ ON employee_master.lob_id=lob_master.id;]]>
 	<field name="first_name" class="java.lang.String"/>
 	<field name="last_name" class="java.lang.String"/>
 	<field name="lob_name" class="java.lang.String"/>
+	<variable name="totalemployees" class="java.lang.Integer" resetType="Group" resetGroup="lob" calculation="Sum"/>
+	<group name="lob">
+		<groupExpression><![CDATA[$F{lob_name}]]></groupExpression>
+		<groupHeader>
+			<band height="80">
+				<staticText>
+					<reportElement x="15" y="13" width="55" height="20"/>
+					<textElement/>
+					<text><![CDATA[lob name:]]></text>
+				</staticText>
+				<textField>
+					<reportElement x="68" y="13" width="100" height="20"/>
+					<textElement/>
+					<textFieldExpression class="java.lang.String"><![CDATA[$F{lob_name}]]></textFieldExpression>
+				</textField>
+				<rectangle>
+					<reportElement x="0" y="47" width="555" height="33"/>
+				</rectangle>
+				<staticText>
+					<reportElement x="32" y="54" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Employee Id]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="174" y="52" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[First Name]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="419" y="52" width="100" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Last Name]]></text>
+				</staticText>
+				<line>
+					<reportElement x="147" y="47" width="1" height="33"/>
+				</line>
+				<line>
+					<reportElement x="355" y="47" width="1" height="33"/>
+				</line>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band height="27">
+				<rectangle>
+					<reportElement x="0" y="0" width="555" height="27"/>
+				</rectangle>
+				<line>
+					<reportElement x="147" y="-7" width="1" height="34"/>
+				</line>
+				<staticText>
+					<reportElement x="174" y="3" width="104" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<text><![CDATA[Total Employees]]></text>
+				</staticText>
+				<line>
+					<reportElement x="355" y="0" width="1" height="27"/>
+				</line>
+				<textField>
+					<reportElement x="407" y="5" width="127" height="20"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression class="java.lang.String"><![CDATA[$V{totalemployees}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupFooter>
+	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -30,76 +95,32 @@ ON employee_master.lob_id=lob_master.id;]]>
 	<pageHeader>
 		<band height="50"/>
 	</pageHeader>
-	<columnHeader>
-		<band height="34" splitType="Stretch">
-			<rectangle>
-				<reportElement x="0" y="0" width="555" height="33"/>
-			</rectangle>
-			<line>
-				<reportElement x="148" y="1" width="1" height="33"/>
-			</line>
-			<line>
-				<reportElement x="304" y="0" width="1" height="34"/>
-			</line>
-			<staticText>
-				<reportElement x="27" y="6" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[Employee Id]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="174" y="6" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[First Name]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="330" y="6" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[Last Name]]></text>
-			</staticText>
-			<line>
-				<reportElement x="457" y="1" width="1" height="32"/>
-			</line>
-			<staticText>
-				<reportElement x="458" y="6" width="97" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[Level of Business]]></text>
-			</staticText>
-		</band>
-	</columnHeader>
 	<detail>
-		<band height="37" splitType="Stretch">
+		<band height="36">
 			<rectangle>
 				<reportElement x="0" y="0" width="555" height="36"/>
 			</rectangle>
 			<textField>
-				<reportElement x="169" y="7" width="106" height="20"/>
+				<reportElement x="32" y="8" width="100" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{id}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="172" y="9" width="106" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{first_name}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement x="148" y="0" width="1" height="34"/>
-			</line>
-			<line>
-				<reportElement x="304" y="0" width="1" height="36"/>
-			</line>
 			<textField>
-				<reportElement x="322" y="7" width="115" height="20"/>
+				<reportElement x="407" y="9" width="127" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{last_name}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="457" y="-1" width="1" height="37"/>
+				<reportElement x="147" y="0" width="1" height="36"/>
 			</line>
-			<textField>
-				<reportElement x="458" y="8" width="96" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{lob_name}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="27" y="8" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{id}]]></textFieldExpression>
-			</textField>
+			<line>
+				<reportElement x="355" y="0" width="1" height="36"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
