--- a/MitosisTimesheet/src/main/webapp/css/style.css
+++ b/MitosisTimesheet/src/main/webapp/css/style.css
@@ -1,13 +1,12 @@
 html, body {
 	margin: 0;
 	width: 100%;
-	counter-reset: Serial; 
+	counter-reset: Serial;
 }
 
- tr .dettd:first-child:before
-{
-  counter-increment: Serial;      /* Increment the Serial counter */
-  content: counter(Serial); /* Display the counter */
+tr .dettd:first-child:before {
+	counter-increment: Serial; /* Increment the Serial counter */
+	content: counter(Serial); /* Display the counter */
 }
 
 tbody {
@@ -63,18 +62,24 @@ a {
 	
 }
 /*MItosis Timesheet*/
-.emp-tab tbody{
+.emp-tab tbody {
 	height: 300px;
-	overflow-y: auto;	
+	overflow-y: auto;
 }
+
 @font-face {
-    font-family: myFirstFont;
-    src: url('../css/font-awesome-4.3.0/fonts/HUMANST521-BT-ROMAN-11929.TTF');
+	font-family: myFirstFont;
+	src:
+		url('../css/font-awesome-4.3.0/fonts/HUMANST521-BT-ROMAN-11929.TTF');
 }
-.logospan{
-	float: left; margin-left: -15px; padding-bottom: 10px;
+
+.logospan {
+	float: left;
+	margin-left: -15px;
+	padding-bottom: 10px;
 }
-.h2hb{
+
+.h2hb {
 	font-family: myFirstFont;
 	color: #5E5F5F;
 	font-size: 42px;
@@ -82,72 +87,128 @@ a {
 	line-height: 1.2;
 	margin-left: 5px;
 }
-.top-header-fixed{
-	background: #C9D4D7; 
+
+.top-header-fixed {
+	background: #C9D4D7;
 }
-.txtarea{
-	margin-top:-20px;
+
+.txtarea {
+	margin-top: -20px;
 }
-.padd-wb{
+
+.padd-wb {
 	padding: 10px 180px 10px 180px ! important;
 }
-.whitebox{ 
-	width: 100%; 
-	background-color: #FFFFFF; 
-	height: auto; 
-	padding: 20px; box-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
-	border-radius: 3px; 
-	margin: 10px 0px; 
+
+.whitebox {
+	width: 100%;
+	background-color: #FFFFFF;
+	height: auto;
+	padding: 20px;
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+	border-radius: 3px;
+	margin: 10px 0px;
 	float: left;
-}.textleft{text-align: left ! important;}
-.textleft > span{float: right;}
-.navbar-fixed-top{
+}
+
+.textleft {
+	text-align: left ! important;
+}
+
+.textleft>span {
+	float: right;
+}
+
+.navbar-fixed-top {
 	border-bottom: 1px solid #C9D4D7;
 }
-.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover{
-	background: #C9D4D7; font-weight: bold; color: #333;
-}
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
-	color: #333; font-weight: bold; background: none; font-size: 18px;	
-}
-.navbar-inverse .navbar-nav a:hover{
-	font-size: 16px; font-weight: bold; color: #333;
-}
-.navbar-nav>li>.dropdown-menu{
-	margin-top: 9px;
-}
-.navbar-inverse .navbar-nav>li>a{
+
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus,
+	.navbar-inverse .navbar-nav>.open>a:hover {
+	background: #C9D4D7;
+	font-weight: bold;
 	color: #333;
 }
-.navbar-inverse .navbar-toggle {
-border: none;
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus,
+	.navbar-inverse .navbar-nav>.active>a:hover {
+	color: #333;
+	font-weight: bold;
+	background: none;
+	font-size: 18px;
 }
+
+.navbar-inverse .navbar-nav a:hover {
+	font-size: 16px;
+	font-weight: bold;
+	color: #333;
+}
+
+.navbar-nav>li>.dropdown-menu {
+	margin-top: 9px;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+	color: #333;
+}
+
+.navbar-inverse .navbar-toggle {
+	border: none;
+}
+
 .navbar-toggle {
 	margin-top: 17px;
 }
+
 .navbar-nav {
-margin: 2px 40px;
+	margin: 2px 40px;
 }
-.dropdown-menu>li>a{color: #333;}
-.navbar-nav>li>.dropdown-menu>li>a:hover{color: #333;}
-.navbar-nav>li>.dropdown-menu{background: #C9D4D7;}
+
+.dropdown-menu>li>a {
+	color: #333;
+}
+
+.navbar-nav>li>.dropdown-menu>li>a:hover {
+	color: #333;
+}
+
+.navbar-nav>li>.dropdown-menu {
+	background: #C9D4D7;
+}
+
 .pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover,
 	.pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover
 	{
 	z-index: 1;
 }
-.alert-msg{
- 	text-align: center; margin-left: 15%; display: block; width: 70%; display: none;
- }
-.alert-msg1{
- 	text-align: center; margin-left: 15%; display: block; width: 70%; display: none;
- }
- .alert-success{
- 	height: 28px; font-size: 20px; border-radius: 10px;
- }
- .alert-danger{
- 	height: 28px; font-size: 20px; border-radius: 10px;
- }
+
+.alert-msg {
+	text-align: center;
+	margin-left: 15%;
+	display: block;
+	width: 70%;
+	display: none;
+}
+
+.alert-msg1 {
+	text-align: center;
+	margin-left: 15%;
+	display: block;
+	width: 70%;
+	display: none;
+}
+
+.alert-success {
+	height: 28px;
+	font-size: 20px;
+	border-radius: 10px;
+}
+
+.alert-danger {
+	height: 28px;
+	font-size: 20px;
+	border-radius: 10px;
+}
 
 .thead-mit-ts {
 	background: #C9D4D7;
@@ -175,24 +236,30 @@ margin: 2px 40px;
 	margin: 35px 0px 35px 0px;
 	word-spacing: 5px;
 }
+
 .level-form-div {
 	width: 100%;
 	margin: 35px 0px 35px 0px;
 	word-spacing: 5px;
 }
-.level-form-div .form-inline .form-control{
+
+.level-form-div .form-inline .form-control {
 	width: 170px;
 }
+
 .btn-formproject {
-	word-spacing: 0;	
+	word-spacing: 0;
 }
-.btn-formempdet{
-			word-spacing: 0px;
+
+.btn-formempdet {
+	word-spacing: 0px;
 }
+
 .project-form-div {
 	margin: 35px 0px 35px 0px;
 	word-spacing: 10px;
 }
+
 .teamassgn-form-div {
 	margin: 35px 0px 35px 0px;
 	word-spacing: 35px;
@@ -207,7 +274,7 @@ margin: 2px 40px;
 .table {
 	border: 1px solid gainsboro;
 	table-layout: fixed;
-white-space: nowrap;
+	white-space: nowrap;
 }
 
 .table th {
@@ -217,92 +284,114 @@ white-space: nowrap;
 
 .table tbody td {
 	text-align: left;
-	 white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
-.search-tab{
-	padding: 15px; float: right; width: 270px;
+.search-tab {
+	padding: 15px;
+	float: right;
+	width: 270px;
 }
-.select{
+
+.select {
 	color: #9e9e9e;
 }
+
 .mitosis_ts {
 	border: 2px solid gray;
 }
+
 .btn-success-ts {
 	background: #0FDA9A;
 	border-radius: 2px;
 	padding: 10px;
 }
+
 .btn-danger-ts {
 	background: #9e2f2f;
 	border-radius: 2px;
 	padding: 10px;
 }
+
 .btn-primary-ts {
 	background: #30699E;
 	border-radius: 2px;
 	padding: 10px;
 }
+
 .btn-warning-ts {
 	background: #FF9900;
 	border-radius: 2px;
 	padding: 10px;
 }
+
 .form-inline .form-group {
 	margin-bottom: 15px;
 }
+
 .logo {
 	padding: 8px 0 8px 0px;
 	float: left;
 }
+
 .top-fixed {
 	width: 100%;
 	height: 80px;
 }
+
 .lb-username {
 	font-size: 18px;
 	margin-top: 20px;
 	margin-right: 30px;
 	position: relative;
 }
+
 .btn-logout {
 	margin-top: 15px;
 }
-.account th, .account td { 
-     border-top: none !important;
-     border-bottom: none !important; 
- }
- .account tbody td{
- 	 text-align: left;
- }
- .label-td{
- 	width: 25%;
- }
- .edit-profile{
- 	 display: none;
- }
- .btn-profile-save{
- 	 display: none;
- }
- .profile-value{
- 	 padding-top: 7px;		
- }
- .btn-profile-edit{
- 	
- }
- .btn-profile-cancel{
- 	display: none;	
- }
-.btn-profile-edit{
- 	
- }
 
- a .glyphicon{
- 	padding-left: 10px;
- }
+.account th, .account td {
+	border-top: none !important;
+	border-bottom: none !important;
+}
+
+.account tbody td {
+	text-align: left;
+}
+
+.label-td {
+	width: 25%;
+}
+
+.edit-profile {
+	display: none;
+}
+
+.btn-profile-save {
+	display: none;
+}
+
+.profile-value {
+	padding-top: 7px;
+}
+
+.btn-profile-edit {
+	
+}
+
+.btn-profile-cancel {
+	display: none;
+}
+
+.btn-profile-edit {
+	
+}
+
+a .glyphicon {
+	padding-left: 10px;
+}
 
 @media ( max-width : 450px) {
 	h2 {
@@ -311,64 +400,67 @@ white-space: nowrap;
 }
 
 @media ( min-width : 767px) {
-	
 	h3 {
 		float: left;
 		color: gray;
 	}
-	.project-form-div>.form-inline .form-control{
+	.project-form-div>.form-inline .form-control {
 		width: 134px;
 	}
 }
 
-@media (max-width: 767px){
-	 .jtr .cp {
+@media ( max-width : 767px) {
+	.jtr .cp {
 		right: 60px ! important;
 	}
 }
 
-@media (max-width: 840px){
- 	.alert-msg{
- 	margin: auto;
- }
- .alert-msg1{
- 	margin: auto;
- }
- }
- 
-@media (max-width: 845px){
-	.nav> li.lb-username{
-		display: none;
-	}
-	.nav> li>.btn-logout{
-		margin-top: 0;
-		margin-bottom: 3px;
-		margin-left: 0;
-	}	
-	
-}
-@media ( min-width : 1040px) {
-	.btn-formproject{
-			float: right;
-	}
-	.form-inline .date{
-			width: 115px; 
-	}
-	.form-inline .hour{
-			width: 115px; 
-	}
-	.form-inline .projectdet-form{
-			width: 312px;
-	}
-	
-	}
-
-@media ( min-width : 800px) {	
-	.navbar-nav{
+@media ( min-width : 800px) {
+	.navbar-nav {
 		margin: 2px 0px;
 	}
 }
 
+@media ( max-width : 840px) {
+	.alert-msg {
+		margin: auto;
+	}
+	.alert-msg1 {
+		margin: auto;
+	}
+}
+
+@media ( max-width : 845px) {
+	.nav>li.lb-username {
+		display: none;
+	}
+	.nav>li>.btn-logout {
+		margin-top: 0;
+		margin-bottom: 3px;
+		margin-left: 0;
+	}
+}
+
+@media ( min-width : 1040px) {
+	.btn-formproject {
+		float: right;
+	}
+	.form-inline .date {
+		width: 115px;
+	}
+	.form-inline .hour {
+		width: 115px;
+	}
+	.form-inline .projectdet-form {
+		width: 312px;
+	}
+}
+
+@media ( min-width : 1340px) {
+	.ts-form-div .form-control {
+		width: 210px;
+	}
+}
 
 .fg-btn, input[type="submit"].fg-btn, input[type="button"].fg-btn {
 	font-family: "proxima_nova_rgregular", sans-serif;
@@ -839,7 +931,6 @@ white-space: nowrap;
 	transition: border-color .3s linear;
 }
 
-
 .fg-wrapper {
 	margin-bottom: 10px;
 }
@@ -1231,7 +1322,11 @@ white-space: nowrap;
 
 40%
 {
--webkit-transform:scale(1);
+-webkit-transform
+:scale(1)
+;
+
+
 }
 }
 @
@@ -1242,14 +1337,21 @@ keyframes bouncedelay { 0%, 80%, 100% {
 
 40%
 {
-transform:scale(1);
--webkit-transform:scale(1);
+transform
+:scale(1)
+;
+
+
+-webkit-transform
+:scale(1)
+;
+
+
 }
 }
 /**
  * Paragraph file upload css.
  */
-
 
 /* #Login Styles
 =======================================*/
@@ -1695,43 +1797,44 @@ transform:scale(1);
 	color: red;
 }
 
- .leave-form-div{
-	word-spacing: 8px;	
+.leave-form-div {
+	word-spacing: 8px;
 	margin: 35px 0px 35px 0px;
 }
 
-.pay-form-div{
+.pay-form-div {
 	text-align: center;
 	word-spacing: 40px;
 	margin-top: 15px;
 	margin-bottom: 30px;
 }
 
-#h-show{
+#h-show {
 	display: none;
 }
-#hr-show{
+
+#hr-show {
 	display: none;
 }
 
 /*Logout account*/
-
 .jtr .cp {
-	cursor:pointer;
+	cursor: pointer;
 	position: fixed;
 	top: 7px;
-	right: 25px;	
-    }
-.jtr #acc_opt{
-	background-color:#fff;
-	border:1px solid #cbcbcb;
-	color:#2a54ce;
-	line-height:10px;
-	padding:1px 0;
-	text-align:left;
-	width:182px;
-	z-index:999;
-	background: rgba(255,255,255,.98);
+	right: 25px;
+}
+
+.jtr #acc_opt {
+	background-color: #fff;
+	border: 1px solid #cbcbcb;
+	color: #2a54ce;
+	line-height: 10px;
+	padding: 1px 0;
+	text-align: left;
+	width: 182px;
+	z-index: 999;
+	background: rgba(255, 255, 255, .98);
 	-webkit-background-clip: padding-box;
 	background-color: #fff;
 	border: 1px solid #c5c5c5;
@@ -1742,99 +1845,127 @@ transform:scale(1);
 	top: 63px;
 	right: 10px;
 	display: none;
-  }
-.jtr #acc_opt span{
-	float:left;
-	font-size:17px;
-	font-weight:bold;
-	padding:7px 5px 7px 15px;
-    width:181px;
-	color:#141823;
+}
+
+.jtr #acc_opt span {
+	float: left;
+	font-size: 17px;
+	font-weight: bold;
+	padding: 7px 5px 7px 15px;
+	width: 181px;
+	color: #141823;
 	line-height: 20px;
-	font-weight:100;
-	border-bottom:solid #d3d7dc 3px;
-    text-decoration:none;
-	font-family:font-family: Helvetica;
+	font-weight: 100;
+	border-bottom: solid #d3d7dc 3px;
+	text-decoration: none;
+	font-family: font-family : Helvetica;
 }
 
-.jtr #acc_opt a
-{
-	float:left;
-	font-size:14px;
-	font-weight:normal;
-	padding:7px 5px 10px 20px;
-    width:181px;
-	color:#141823;
-	position:relative;
-    line-height: 20px;
-	font-weight:100;
-	border-bottom:solid #d3d7dc 1px;
-    text-decoration:none;
-	font-family:font-family: Helvetica;
+.jtr #acc_opt a {
+	float: left;
+	font-size: 14px;
+	font-weight: normal;
+	padding: 7px 5px 10px 20px;
+	width: 181px;
+	color: #141823;
+	position: relative;
+	line-height: 20px;
+	font-weight: 100;
+	border-bottom: solid #d3d7dc 1px;
+	text-decoration: none;
+	font-family: font-family : Helvetica;
 }
 
-.jtr #acc_opt a:hover
-{
-	  background: #C9D4D7;
-	  color: white;
+.jtr #acc_opt a:hover {
+	background: #C9D4D7;
+	color: white;
 }
 
-.opt
-{
-	background:url("http://images.jdmagicbox.com/icontent/HP_Header_Sprite.gif")
-	no-repeat;display:inline-block;	
-	background-position:-3px -89px;
-	cursor:pointer;
-	height:17px;
-	width:20px;
-	vertical-align:middle
+.opt {
+	background:
+		url("http://images.jdmagicbox.com/icontent/HP_Header_Sprite.gif")
+		no-repeat;
+	display: inline-block;
+	background-position: -3px -89px;
+	cursor: pointer;
+	height: 17px;
+	width: 20px;
+	vertical-align: middle
 }
 
 /* Fix for Bootstrap 3 with Angular UI Bootstrap */
-
-.modal { 
+.modal {
 	display: block;
 }
 
 /* Custom dialog/modal headers */
+.dialog-header-error {
+	background-color: #d2322d;
+}
 
-.dialog-header-error { background-color: #d2322d; }
-.dialog-header-wait { background-color: #428bca; }
-.dialog-header-notify { background-color: #eeeeee; }
-.dialog-header-confirm { background-color: #333333; }
-	.dialog-header-error span, .dialog-header-error h4,
-	.dialog-header-wait span, .dialog-header-wait h4,
-	.dialog-header-confirm span, .dialog-header-confirm h4 { color: #ffffff; }
+.dialog-header-wait {
+	background-color: #428bca;
+}
+
+.dialog-header-notify {
+	background-color: #eeeeee;
+}
+
+.dialog-header-confirm {
+	background-color: #333333;
+}
+
+.dialog-header-error span, .dialog-header-error h4, .dialog-header-wait span,
+	.dialog-header-wait h4, .dialog-header-confirm span,
+	.dialog-header-confirm h4 {
+	color: #ffffff;
+}
 
 /* Ease Display */
-
-.pad { padding: 25px; }
- 
- @media (min-width: 768px){
-.modal-dialog {
-  width: 600px;
-  margin: 22% auto;
-}
+.pad {
+	padding: 25px;
 }
 
- .dettd{
+@media ( min-width : 768px) {
+	.modal-dialog {
+		width: 600px;
+		margin: 22% auto;
+	}
+}
+
+.dettd {
 	width: 120px;
 }
-.popup>thead>tr>th{
+
+.popup>thead>tr>th {
 	padding: 5px;
 }
-.lm{
+
+.lm {
 	padding-left: 12px;
 }
-.emp-det-show{
-	width: 600px; height: auto; display: none; top: 20%; left: 30%; z-index: 105; background: white; position: fixed; padding: 10px; box-shadow: 0px 0px 2px rgba(0,0,0,0.2); 
-	border-radius: 3px; font-size: 20px;
+
+.emp-det-show {
+	width: 600px;
+	height: auto;
+	display: none;
+	top: 20%;
+	left: 30%;
+	z-index: 105;
+	background: white;
+	position: fixed;
+	padding: 10px;
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+	border-radius: 3px;
+	font-size: 20px;
 }
-tbody .scrollit{
-    overflow: auto;
-    height: 250px;
+
+tbody .scrollit {
+	overflow: auto;
+	height: 250px;
 }
-.popuph4{
+
+.popuph4 {
 	margin-top: 0;
 	margin-bottom: 8px;
 }
