--- a/MitosisTimesheet/src/main/webapp/reports/LeaveSummaryReport.jrxml
+++ b/MitosisTimesheet/src/main/webapp/reports/LeaveSummaryReport.jrxml
@@ -1,8 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="LeaveSummaryReport" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="LeaveSummaryReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="76"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="fromDate" class="java.lang.String">
+		<defaultValueExpression><![CDATA[$P{fromDate}]]></defaultValueExpression>
+	</parameter>
+	<parameter name="toDate" class="java.lang.String">
+		<parameterDescription><![CDATA[]]></parameterDescription>
+		<defaultValueExpression><![CDATA[$P{toDate}]]></defaultValueExpression>
+	</parameter>
+	<parameter name="startDate" class="java.lang.String">
+		<defaultValueExpression><![CDATA[$P{startDate}]]></defaultValueExpression>
+	</parameter>
+	<parameter name="fromDateRev" class="java.lang.String">
+		<parameterDescription><![CDATA[]]></parameterDescription>
+		<defaultValueExpression><![CDATA[$P{fromDateRev}]]></defaultValueExpression>
+	</parameter>
+	<parameter name="toDateRev" class="java.lang.String">
+		<defaultValueExpression><![CDATA[$P{toDateRev}]]></defaultValueExpression>
+	</parameter>
+	<queryString>
+		<![CDATA[select T1.name, T1.totalLeave, T2.tot from
+(select name,sum(no_of_days) as totalLeave
+from mitosisTimesheetTest.leave_details leaveDet,user_details user
+where (leaveDet.employee_id=user.id)
+and leaveDet.from_date>=$P{fromDateRev} and leaveDet.to_date<=$P{toDateRev}
+group by name) T1,
+(select name,sum(no_of_days) as tot
+from mitosisTimesheetTest.leave_details lea,user_details us
+where lea.employee_id=us.id and lea.from_date>=$P{startDate} and
+lea.to_date<=$P{toDateRev} group by name) T2
+where T1.name=T2.name;]]>
+	</queryString>
+	<field name="name" class="java.lang.String"/>
+	<field name="totalLeave" class="java.math.BigDecimal"/>
+	<field name="tot" class="java.math.BigDecimal"/>
 	<group name="leaveSummary">
 		<groupExpression><![CDATA[$V{PAGE_NUMBER}]]></groupExpression>
 		<groupHeader>
@@ -17,7 +50,7 @@
 					<reportElement x="286" y="23" width="1" height="33"/>
 				</line>
 				<line>
-					<reportElement x="397" y="23" width="1" height="33"/>
+					<reportElement x="418" y="23" width="1" height="33"/>
 				</line>
 				<staticText>
 					<reportElement x="19" y="31" width="100" height="20"/>
@@ -27,17 +60,18 @@
 				<staticText>
 					<reportElement x="157" y="30" width="100" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[From Date]]></text>
+					<text><![CDATA[No Of Days Taken
+]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="302" y="30" width="76" height="20"/>
+					<reportElement x="302" y="30" width="85" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[To Date]]></text>
+					<text><![CDATA[Total No of Days ]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="435" y="30" width="100" height="20"/>
+					<reportElement x="436" y="30" width="105" height="20"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
-					<text><![CDATA[No of Days Taken]]></text>
+					<text><![CDATA[Balance Leave Days]]></text>
 				</staticText>
 			</band>
 		</groupHeader>
@@ -68,7 +102,7 @@
 				<text><![CDATA[ToDate:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="144" y="50" width="100" height="20"/>
+				<reportElement x="143" y="50" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{fromDate}]]></textFieldExpression>
 			</textField>
@@ -81,11 +115,6 @@
 	</title>
 	<detail>
 		<band height="41" splitType="Stretch">
-			<staticText>
-				<reportElement x="33" y="169" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[Name]]></text>
-			</staticText>
 			<rectangle>
 				<reportElement x="10" y="-1" width="555" height="41"/>
 			</rectangle>
@@ -96,27 +125,27 @@
 				<reportElement x="286" y="-1" width="1" height="42"/>
 			</line>
 			<line>
-				<reportElement x="397" y="-1" width="1" height="41"/>
+				<reportElement x="418" y="-1" width="1" height="41"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="15" y="8" width="101" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{employee.name}]]></textFieldExpression>
+				<reportElement x="20" y="10" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="142" y="8" width="129" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{fromDate})]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="292" y="9" width="102" height="20"/>
+				<reportElement x="157" y="10" width="100" height="20"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format($F{toDate})]]></textFieldExpression>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{totalLeave}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="434" y="8" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{noOfDays}]]></textFieldExpression>
+			<textField pattern="">
+				<reportElement x="436" y="10" width="100" height="20"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[new BigDecimal("5").subtract($F{tot})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="297" y="10" width="100" height="20"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression class="java.math.BigDecimal"><![CDATA[$F{tot}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
